--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,33 @@
       crossorigin="anonymous"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <title>MNDS</title>
+    <meta name="title" content="MNDS" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Averiguá el tipo de cambio entre diferentes monedas y mirá información de las principales criptomonedas."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://valor-monedas.web.app/" />
+    <meta property="og:title" content="MNDS" />
+    <meta
+      property="og:description"
+      content="Averiguá el tipo de cambio entre diferentes monedas y mirá información de las principales criptomonedas."
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://valor-monedas.web.app/" />
+    <meta property="twitter:title" content="MNDS" />
+    <meta
+      property="twitter:description"
+      content="Averiguá el tipo de cambio entre diferentes monedas y mirá información de las principales criptomonedas."
+    />
+    <meta property="twitter:image" content="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MNDS</title>
   </head>
