Img en meta agregada

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       property="og:description"
       content="Averiguá el tipo de cambio entre diferentes monedas y mirá información de las principales criptomonedas."
     />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="%PUBLIC_URL%/MNDS.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,7 +36,7 @@
       property="twitter:description"
       content="Averiguá el tipo de cambio entre diferentes monedas y mirá información de las principales criptomonedas."
     />
-    <meta property="twitter:image" content="" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/MNDS.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MNDS</title>
   </head>
